--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
   clear: both; }
 
 body {
-  background: #f9f9f9; }
+  background: #f9f9f9;
+  margin-bottom: 100px; }
 
 p, li {
   font-size: 22px;
@@ -59,18 +60,29 @@ h2 {
   margin: 60px 0;
   font-size: 40px; }
 
-.instafeed {
+.instafeed, .gallery {
   list-style: none; }
 
 .instafeed li {
   float: left;
   width: 220px;
-  height: 220px;
+  height: 100%;
   margin: 10px; }
+
+.gallery li {
+  float: left;
+  width: 32%;
+  height: 320px;
+  margin: 0px; }
+
+.gallery li img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
 
 .instafeed li img {
   max-width: 100%;
-  max-height: 100%; }
+  height: 220px; }
 
 button {
   padding: 10px 20px;
