--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 
 body {
   background: #f9f9f9;
+	margin-bottom: 100px;
 }
 
 p,li {
@@ -70,18 +71,34 @@ h2 {
 	font-size: 40px;
 }
 
-.instafeed{
+.instafeed, .gallery{
   list-style:none  
 }
+
 .instafeed li{
   float:left;
   width:220px;
-  height:220px;
+  height:100%;
   margin:10px
 }
-.instafeed li img{
+
+.gallery li{
+  float:left;
+  width:32%;
+  height:320px;
+  margin:0px;
+	
+}
+
+.gallery li img{
+ width:100%;
+ height:100%;
+ overflow:hidden;
+}
+
+.instafeed li img {
   max-width:100%;
-  max-height:100%;
+  height:220px;
 }
 
 button {
