--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
   clear: both; }
 
 body {
-  background: #f9f9f9;
+  background: url("/images/bg_light.jpg") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   margin-bottom: 100px; }
 
 p, li {
@@ -47,6 +49,8 @@ ul {
     color: white;
     font-size: 20px;
     font-weight: bold; }
+    .navEl a:hover {
+      color: deepskyblue; }
 
 .container {
   width: 100%;
