--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,9 @@
 }
 
 body {
-  background: #f9f9f9;
+  	background:url('/images/bg_light.jpg') no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
 	margin-bottom: 100px;
 }
 
@@ -54,6 +56,9 @@ ul{
 		color: white;
 		font-size: 20px;
 		font-weight: bold;
+		&:hover{
+			color:deepskyblue;
+		}
 	}
 }
 
