--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  	background:url('/images/bg_light.jpg') no-repeat;
+  	background:url('./images/bg_light.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	margin-bottom: 100px;
