--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   clear: both; }
 
 body {
-  background: url("/images/bg_light.jpg") no-repeat;
+  background: url("/images/bg_light.jpg");
   background-size: cover;
   background-attachment: fixed;
   margin-bottom: 100px; }
