--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   clear: both; }
 
 body {
-  background: url("/images/bg_light.jpg");
+  background: url("https://raw.githubusercontent.com/nephente1/React-Router-with-Api-fetch-app/master/images/bg_light.jpg");
   background-size: cover;
   background-attachment: fixed;
   margin-bottom: 100px; }
